--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,13 +11,13 @@ on:
 
 jobs:
   build:
+      
+    runs-on: ubuntu-latest
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      #- run: echo "Esse é o meu pipeline 942130068"
-
-    runs-on: ubuntu-latest
+      - run: echo "Esse é o meu pipeline 942130068"
 
     strategy:
       matrix:
